--- a/styles/components/button.sass
+++ b/styles/components/button.sass
@@ -5,3 +5,8 @@
     @apply bg-primary-100 text-secondary-100
     &:hover
         @apply bg-primary-200 text-secondary-100
+
+.button-light
+    @apply bg-secondary-100 text-primary-100 border border-primary-100
+    &:hover
+        @apply bg-primary-100 bg-opacity-60 text-secondary-100 border-secondary-100
