--- a/styles/components/button.sass
+++ b/styles/components/button.sass
@@ -1,5 +1,5 @@
 .button
-    @apply px-7 py-5 rounded-lg
+    @apply px-7 py-5 rounded
     
 .button-primary
     @apply bg-primary-100 text-secondary-100
