chore: update nav + home cover styles

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -14,3 +14,8 @@
 @import "pages/equip"
 @import "pages/especialitats"
 @import "pages/index"
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap')
+
+body
+    @apply font-normal
