--- a/styles/components/button.sass
+++ b/styles/components/button.sass
@@ -1,5 +1,5 @@
 .button
-    @apply px-7 py-5 rounded
+    @apply px-7 py-5 rounded transition ease-in-out duration-300
     
 .button-primary
     @apply bg-primary-100 text-secondary-100
@@ -7,6 +7,6 @@
         @apply bg-primary-200 text-secondary-100
 
 .button-light
-    @apply bg-secondary-100 text-primary-100 border border-primary-100
+    @apply bg-secondary-100 text-primary-100
     &:hover
-        @apply bg-primary-100 bg-opacity-60 text-secondary-100 border-secondary-100
+        @apply bg-primary-200 bg-opacity-60 text-secondary-100 
