add: new sections home

--- a/styles/components/button.sass
+++ b/styles/components/button.sass
@@ -1,5 +1,7 @@
 .button
-    @apply px-7 py-5 rounded transition ease-in-out duration-300
+    @apply px-7 py-5 rounded transition ease-in-out duration-300 inline-flex items-center
+    svg 
+        @apply ml-3
     
 .button-primary
     @apply bg-primary-100 text-secondary-100
