--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -18,4 +18,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap')
 
 body
-    @apply font-normal
+    @apply font-normal text-primary-300 leading-7
+
+p 
+    @apply text-primary-100
+
+h1, h2, h3, h4
+    @apply text-primary-300 font-semibold
+
+h1
+    @apply text-5xl 
+
+h2 
+    @apply text-4xl leading-snug
+
+h3
+    @apply text-xl font-bold
+
+blockquote
+    @apply text-2xl font-normal leading-normal relative
+    &::before
+        content: '' 
+        display: block
+        position: absolute
+        background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='62px' height='42px' viewBox='0 0 62 42' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Ctitle%3E“%3C/title%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd' font-family='PassionOne-Regular, Passion One' font-size='160' font-weight='normal'%3E%3Ctext id='“' fill='%237092E8'%3E%3Ctspan x='-2' y='104'%3E“%3C/tspan%3E%3C/text%3E%3C/g%3E%3C/svg%3E")
+        background-repeat: no-repeat
+        top: -40px
+        left: -80px
+        opacity: 0.3
+        width: 120px
+        height: 83px
+        background-size: cover
