add: home sectiosn + footer

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -27,7 +27,7 @@ h1, h2, h3, h4
     @apply text-primary-300 font-semibold
 
 h1
-    @apply text-5xl 
+    @apply text-5xl leading-tight
 
 h2 
     @apply text-4xl leading-snug
