add: equip page

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -49,3 +49,10 @@ blockquote
         width: 120px
         height: 83px
         background-size: cover
+
+main li
+    @apply flex items-start
+    &::before
+        content: "–"
+        display: block
+        margin-right: 15px
