add: updated colour palette + icons index

--- a/styles/layout/navigation.sass
+++ b/styles/layout/navigation.sass
@@ -2,16 +2,16 @@ nav
     li 
         @apply relative px-5
         a
-            @apply text-primary-200 text-base 
+            @apply text-primary-400 text-base 
     li:hover 
         a
-            @apply text-primary-100
+            @apply text-primary-500
             &::after
                 content: ''
                 height: 3px
                 width: calc( 100% - 40px )
                 display: block
-                background: #2d2e82
+                background: #004f80
                 margin-top: 10px
                 position: absolute
     li.contact:last-child
