--- a/styles/pages/index.sass
+++ b/styles/pages/index.sass
@@ -4,5 +4,5 @@
         width: 30px
         height: 1px
         display: block
-        background: #7092E8
+        background: #076899
         margin-right: 10px
