--- a/styles/components/button.sass
+++ b/styles/components/button.sass
@@ -4,11 +4,11 @@
         @apply ml-3
     
 .button-primary
-    @apply bg-primary-100 text-secondary-100
+    @apply bg-primary-500 text-secondary-100
     &:hover
-        @apply bg-primary-200 text-secondary-100
+        @apply bg-primary-300
 
 .button-light
-    @apply bg-secondary-100 text-primary-100
+    @apply bg-secondary-100 text-primary-500
     &:hover
-        @apply bg-primary-200 bg-opacity-60 text-secondary-100 
+        @apply bg-secondary-200 
