--- a/styles/components/button.sass
+++ b/styles/components/button.sass
@@ -12,3 +12,6 @@
     @apply bg-secondary-100 text-primary-500
     &:hover
         @apply bg-secondary-200 
+
+.button-small
+    @apply px-5 py-3
