chore: update page equip

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -21,7 +21,9 @@ body
     @apply font-normal text-primary-300 leading-7
 
 p 
-    @apply text-primary-300
+    @apply text-primary-300 mb-4
+    &:last-child
+        @apply mb-0
 
 h1, h2, h3, h4
     @apply text-primary-400 font-semibold
