add: politica cookies

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -14,6 +14,7 @@
 @import "pages/equip"
 @import "pages/especialitats"
 @import "pages/index"
+@import "pages/legal"
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap')
 
