add: front --> individual team pages + global changes

--- a/styles/layout/forms.sass
+++ b/styles/layout/forms.sass
@@ -12,6 +12,7 @@ form
         border: 1px solid
         padding: 5px 15px
         resize: vertical
+        @apply rounded-md
         &::placeholder
             font-size: 13px
     textarea
