--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -1,9 +1,5 @@
 @charset 'UTF-8'
     
-@tailwind base
-@tailwind components
-@tailwind utilities
-
 @import "base/global"
 @import "components/button"
 @import "components/dropdown"
@@ -17,6 +13,7 @@
 @import "pages/especialitats"
 @import "pages/index"
 @import "pages/legal"
+@import "vendors/tailwindcss"
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap')
 
