--- a/styles/layout/navigation.sass
+++ b/styles/layout/navigation.sass
@@ -25,3 +25,16 @@ nav
         a
             &::after
                 content: none
+    .nav__right
+        @apply -right-full fixed top-0 max-w-md w-10/12 transition-all duration-500 ease-in-out h-screen bg-secondary-100 py-16 px-6
+        &.active
+            @apply right-0
+        ul
+            li, li a
+                @apply w-full
+                @screen lg
+                    @apply w-auto
+            li
+                @apply py-3
+        @screen lg
+            @apply relative flex justify-end right-0 w-auto max-w-full h-auto bg-transparent py-0 px-0
