add: front --> responsive

--- a/styles/components/dropdown.sass
+++ b/styles/components/dropdown.sass
@@ -4,7 +4,9 @@
         @apply hidden
     &:hover
         .dropdown-menu
-            @apply flex flex-wrap absolute bg-primary-100 py-2
+            @apply flex flex-wrap relative bg-primary-100 mt-3 py-2
+            @screen lg
+                @apply absolute
             li
                 @apply whitespace-nowrap py-2 px-8 w-full cursor-pointer
                 a
