--- a/styles/pages/legal.sass
+++ b/styles/pages/legal.sass
@@ -5,8 +5,9 @@
         @apply text-xl mb-5
     ul
         @apply mb-4
-    li
-        @apply block relative pl-6
-        &::before
-            @apply absolute 
-            left: 0px
+    ul:not(.breadcrumb)
+        li
+            @apply block relative pl-6
+            &::before
+                @apply absolute 
+                left: 0px
