feat: front --> google reviews

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -1,4 +1,6 @@
 @charset 'UTF-8'
+
+@import "node_modules/@glidejs/glide/src/assets/sass/glide.core"
     
 @import "base/global"
 @import "components/button"
