fix: front --> nav

--- a/styles/layout/navigation.sass
+++ b/styles/layout/navigation.sass
@@ -21,8 +21,8 @@ nav
             &.no-detail
                 &::after
                     content: none
-    li.contact:last-child
-        a
+    li.contact:hover
+        a, span
             &::after
                 content: none
     .nav__right
