fix: front --> typos

--- a/styles/layout/navigation.sass
+++ b/styles/layout/navigation.sass
@@ -31,9 +31,9 @@ nav
             @apply right-0
         ul
             li, li a
-                @apply w-full
+                @apply w-full whitespace-pre-wrap leading-tight
                 @screen lg
-                    @apply w-auto
+                    @apply w-auto whitespace-nowrap leading-normal
             li
                 @apply py-3
         @screen lg
