add: front --> photos ortodoncia

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -16,5 +16,6 @@
 @import "pages/index"
 @import "pages/legal"
 @import "vendors/tailwindcss"
+@import "vendors/glide"
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap')
